<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    
	       >
    <LinearLayout 
         android:id="@+id/dialog_title_linearly" 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
    
      	>
        <TextView
            android:id="@+id/dialog_title_name"  
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_lic"
            android:textColor="@color/title_bg"
            android:textSize="@dimen/widget_title_txtsize"
            android:padding="@dimen/widget_padding"
            android:layout_margin="@dimen/widget_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title_linearly">
        <LinearLayout
            android:id="@+id/lic_info_lly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/dialog_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="@dimen/widget_padding"
                android:layout_below="@id/dialog_title_linearly"
                android:textSize="@dimen/ccc_widget_textsize"
                />

             <View
                android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:layout_marginTop="@dimen/widget_padding"
                   android:background="@color/gray"
                   android:layout_below="@id/dialog_content"
                 />
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ccc_widget_height"
                android:orientation="horizontal"

                android:layout_below="@id/dialog_divice"
                >
                   <Button
                    android:id="@+id/lic_cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@drawable/selector_btn_left"
                    android:text="@string/to_return"
                    android:padding="@dimen/widget_padding"
                    android:textSize="@dimen/widget_txtsize"
                    android:textColor="@color/white"/>
                   <View android:layout_width="1dp"
                       android:layout_height="match_parent"
                       android:background="@color/gray"
                       />
                 <Button
                     android:id="@+id/lic_register_btn"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="4"
                     android:background="@drawable/selector_btn_right"
                     android:text="@string/register_lic"
                     android:padding="@dimen/widget_padding"
                     android:textSize="@dimen/widget_txtsize"
                     android:textColor="@color/white"
                     />
                 <View android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="@color/gray"/>
                   <Button
                    android:id="@+id/lic_download_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@drawable/selector_btn_right"
                    android:text="@string/download_lic"
                    android:padding="@dimen/widget_padding"
                    android:textSize="@dimen/widget_txtsize"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lic_register_lly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">
            <EditText
                android:id="@+id/register_people"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/setting_edt_style"
                android:padding="@dimen/widget_padding"
                android:hint="@string/register_people"
               />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_dividers"
                android:layout_marginLeft="@dimen/widget_padding"
                android:layout_marginRight="@dimen/widget_padding"/>
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/setting_edt_style"
                android:padding="@dimen/widget_padding"
                android:hint="@string/phone"
                android:inputType="number"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_dividers"
                android:layout_marginLeft="@dimen/widget_padding"
                android:layout_marginRight="@dimen/widget_padding"/>
            <EditText
                android:id="@+id/device_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/setting_edt_style"
                android:padding="@dimen/widget_padding"
                android:hint="@string/device_type" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_dividers"
                android:layout_marginLeft="@dimen/widget_padding"
                android:layout_marginRight="@dimen/widget_padding" />
            <EditText
                android:id="@+id/device_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/setting_edt_style"
                android:padding="@dimen/widget_padding"
                android:hint="@string/device_no" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_dividers"
                android:layout_marginLeft="@dimen/widget_padding"
                android:layout_marginRight="@dimen/widget_padding"/>
            <EditText
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/setting_edt_style"
                android:padding="@dimen/widget_padding"
                android:hint="@string/customer_name" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_dividers"
                android:layout_marginLeft="@dimen/widget_padding"
                android:layout_marginRight="@dimen/widget_padding"/>
            <EditText
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/setting_edt_style"
                android:padding="@dimen/widget_padding"
                android:hint="@string/end_date"
                android:editable="false"
                android:clickable="true"/>
            <View
                android:id="@+id/dialog_divice"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/widget_padding"
                android:background="@color/gray"
                android:layout_below="@id/dialog_content"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ccc_widget_height"
                android:orientation="horizontal"

                android:layout_below="@id/dialog_divice"
                >
                <Button
                    android:id="@+id/register_cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@drawable/selector_btn_left"
                    android:text="@string/to_return"
                    android:padding="@dimen/widget_padding"
                    android:textSize="@dimen/widget_txtsize"
                    android:textColor="@color/white"/>
                <View android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray"/>
                <Button
                    android:id="@+id/register_confirm_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@drawable/selector_btn_right"
                    android:text="@string/register_lic"
                    android:padding="@dimen/widget_padding"
                    android:textSize="@dimen/widget_txtsize"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
